k8s-deploy/manifests/jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  namespace: sophia
  labels:
    app: jaeger
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: sophia-jaeger
    app.kubernetes.io/name: jaeger
spec:
  ports:
  - name: http
    port: 14268
    protocol: TCP
    targetPort: 14268
  - name: grpc
    port: 14250
    protocol: TCP
    targetPort: 14250
  selector:
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: sophia-jaeger
    app.kubernetes.io/name: jaeger
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  namespace: sophia
  labels:
    app: jaeger
    app.kubernetes.io/component: query
    app.kubernetes.io/instance: sophia-jaeger
    app.kubernetes.io/name: jaeger
spec:
  ports:
  - name: http
    port: 16686
    protocol: TCP
    targetPort: 16686
  selector:
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: sophia-jaeger
    app.kubernetes.io/name: jaeger
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-ui
  namespace: sophia
spec:
  hosts:
  - "jaeger.sophia-intel.ai"
  gateways:
  - sophia-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: jaeger-query
        port:
          number: 16686
